Fixed titles+subtitles, nbsp, cleaned comments, new highcharts-style.css, etc.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
 
 <link rel="stylesheet" href="./style.css" />
+<link rel="stylesheet" href="./highcharts-style.css" />
 
 <!-- html -->
 <div id="vis-container-navestidla"></div>
@@ -18,6 +19,18 @@
 <div id="vis-pomer-nehody"></div>
 <div id="vis-srazky-rocne"></div>
 
+<script>
+  
+var colors = {
+  'default': '#aaa',
+  '2020': '#e63946',
+  '2018': '#009FB8',
+  '2019': '#3E80B6',
+  // '2020-light': '#F6B6BB',
+  // '2018-light': '#C1E5EB',
+  // '2019-light': '#C1D8EC',
+}
+</script>
 <script type="text/javascript" src="./vlaky.js"></script>
 <script type="text/javascript" src="./nehody-rocne.js"></script>
 <script type="text/javascript" src="./pomer-nehody.js"></script>
