--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
 
-<link rel="stylesheet" href="./style.css" />
-<link rel="stylesheet" href="./highcharts-style.css" />
+<link rel="stylesheet" href="https://data.irozhlas.cz/vlaky-nepovolena-jizda-2020/style.css" />
+<link rel="stylesheet" href="https://data.irozhlas.cz/vlaky-nepovolena-jizda-2020/highcharts-style.css" />
 
 <!-- html -->
 <div id="vis-container-navestidla"></div>
@@ -31,7 +31,7 @@ var colors = {
   // '2019-light': '#C1D8EC',
 }
 </script>
-<script type="text/javascript" src="./vlaky.js"></script>
-<script type="text/javascript" src="./nehody-rocne.js"></script>
-<script type="text/javascript" src="./pomer-nehody.js"></script>
-<script type="text/javascript" src="./srazky-rocne.js"></script>
+<script type="text/javascript" src="https://data.irozhlas.cz/vlaky-nepovolena-jizda-2020/vlaky.js"></script>
+<script type="text/javascript" src="https://data.irozhlas.cz/vlaky-nepovolena-jizda-2020/nehody-rocne.js"></script>
+<script type="text/javascript" src="https://data.irozhlas.cz/vlaky-nepovolena-jizda-2020/pomer-nehody.js"></script>
+<script type="text/javascript" src="https://data.irozhlas.cz/vlaky-nepovolena-jizda-2020/srazky-rocne.js"></script>
